# maskcomponent

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_maskcomponent.py  setup.py
docs/: API.md  PROJECT_STRUCTURE.md  TROUBLESHOOTING.md  pgadmin_simple_query.sql  pgadmin_url_query.sql
examples/: example_input.json  example_input_base64.json
mask_generation/: __init__.py  config.py  mask_generator.py  mask_generator_fast.py  models.py  utils.py
preprocess/detectron2/projects/DensePose/: apply_net.py  apply_net_gradio.py  setup.py
preprocess/humanparsing/: run_parsing.py
preprocess/openpose/: run_openpose.py
scripts/: create_topics.sh  setup_env.sh  start_kafka.sh
src/maskcomponent/: __init__.py  config.py  db.py  kafka_consumer.py  kafka_producer.py  logger.py  main.py  mask_gen.py  storage.py  url_helper.py  worker.py
src/maskcomponent/tests/: __init__.py
tools/: get_mask_urls.py  get_presigned_urls.py  migrate_add_mask_types.py  send_image_message.py
