[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maskcomponent"
version = "1.0.0"
description = "Kafka-based mask generation microservice"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiokafka>=0.10.0",
    "minio>=7.2.0",
    "asyncpg>=0.29.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
maskcomponent = "maskcomponent.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/maskcomponent/tests"]



